force-app/main/default/objects/ContactCampaignInfo__c/ContactCampaignInfo__c.object-meta.xml
<CustomObject>
    <description>Objekt zur Aufnahme von Kampagneninfos für Kontakte</description>
    <label>Kampagneninfo</label>
    <nameField>
        <displayFormat>KI-{000000000}</displayFormat>
        <label>Kampagneninfo-AutoNr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kampagneninfos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>