force-app/main/default/objects/ContactCampaignInfo__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Kampagneninfos</relationshipLabel>
    <relationshipName>R00N20000000tjWtEAI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>