force-app/main/default/objects/ContactCampaignInfo__c/fields/CBA_Letter__c.field-meta.xml
<CustomField>
    <fullName>CBA_Letter__c</fullName>
    <label>CBA Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed in return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>