force-app/main/default/objects/ContactCampaignInfo__c/fields/Comments_Costs__c.field-meta.xml
<CustomField>
    <fullName>Comments_Costs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments Costs</label>
    <type>TextArea</type>
</CustomField>