force-app/main/default/objects/ContactCampaignInfo__c/fields/Comments_Food__c.field-meta.xml
<CustomField>
    <fullName>Comments_Food__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments Food</label>
    <type>TextArea</type>
</CustomField>