force-app/main/default/objects/ContactCampaignInfo__c/fields/Comments_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Comments_Hotel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments Hotel</label>
    <type>TextArea</type>
</CustomField>