force-app/main/default/objects/ContactCampaignInfo__c/fields/Comments_Travel__c.field-meta.xml
<CustomField>
    <fullName>Comments_Travel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments Travel</label>
    <type>TextArea</type>
</CustomField>