force-app/main/default/objects/ContactCampaignInfo__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Kampagneninfos</relationshipLabel>
    <relationshipName>R00N20000000tjWyEAI</relationshipName>
    <type>Lookup</type>
</CustomField>