force-app/main/default/objects/ContactCampaignInfo__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>