force-app/main/default/objects/ContactCampaignInfo__c/fields/Course_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Fee Paid</label>
    <type>Checkbox</type>
</CustomField>