force-app/main/default/objects/ContactCampaignInfo__c/fields/Cvent_Registration__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cvent Registration</label>
    <type>Checkbox</type>
</CustomField>