force-app/main/default/objects/ContactCampaignInfo__c/fields/Cvent_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cvent Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>