force-app/main/default/objects/ContactCampaignInfo__c/fields/EBS_Registration__c.field-meta.xml
<CustomField>
    <fullName>EBS_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer has been registered in the EBS-System</description>
    <label>EBS Registration</label>
    <type>Checkbox</type>
</CustomField>