force-app/main/default/objects/ContactCampaignInfo__c/fields/Food_Dinner__c.field-meta.xml
<CustomField>
    <fullName>Food_Dinner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abendessen</label>
    <type>Checkbox</type>
</CustomField>