force-app/main/default/objects/ContactCampaignInfo__c/fields/Food_FirstDinnerDate__c.field-meta.xml
<CustomField>
    <fullName>Food_FirstDinnerDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1. Abendessen</label>
    <type>Date</type>
</CustomField>