force-app/main/default/objects/ContactCampaignInfo__c/fields/Form_Get_Back__c.field-meta.xml
<CustomField>
    <fullName>Form_Get_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact sent the forms back</description>
    <label>Formulare zurück</label>
    <type>Checkbox</type>
</CustomField>