force-app/main/default/objects/ContactCampaignInfo__c/fields/Hepatitis_B__c.field-meta.xml
<CustomField>
    <fullName>Hepatitis_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hepatitis B</label>
    <type>Checkbox</type>
</CustomField>