force-app/main/default/objects/ContactCampaignInfo__c/fields/Hotel_FirstAccomodationDate__c.field-meta.xml
<CustomField>
    <fullName>Hotel_FirstAccomodationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1. Übernachtung</label>
    <type>Date</type>
</CustomField>