force-app/main/default/objects/ContactCampaignInfo__c/fields/Invitation_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitation Letter Sent</label>
    <type>Checkbox</type>
</CustomField>