force-app/main/default/objects/ContactCampaignInfo__c/fields/Kodexvereinbarung__c.field-meta.xml
<CustomField>
    <fullName>Kodexvereinbarung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kodexvereinbarung</label>
    <type>Checkbox</type>
</CustomField>