force-app/main/default/objects/ContactCampaignInfo__c/fields/Means_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Means_of_Travel__c</fullName>
    <label>Means of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>