force-app/main/default/objects/ContactCampaignInfo__c/fields/Room_Category__c.field-meta.xml
<CustomField>
    <fullName>Room_Category__c</fullName>
    <label>Room Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smoking</fullName>
            </value>
            <value>
                <fullName>Non-Smoking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>