force-app/main/default/objects/ContactCampaignInfo__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Room</fullName>
            </value>
            <value>
                <fullName>Double Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>