force-app/main/default/objects/ContactCampaignInfo__c/fields/Tickets_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tickets Ordered</label>
    <type>Checkbox</type>
</CustomField>