force-app/main/default/objects/ContactCampaignInfo__c/fields/Travel_Costs__c.field-meta.xml
<CustomField>
    <fullName>Travel_Costs__c</fullName>
    <label>Travel Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>