force-app/main/default/objects/ContactCampaignInfo__c/fields/Vegetarian__c.field-meta.xml
<CustomField>
    <fullName>Vegetarian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vegetarian</label>
    <type>Checkbox</type>
</CustomField>