force-app/main/default/objects/ContactCampaignInfo__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Food_Dinner__c</columns>
    <columns>Means_of_Travel__c</columns>
    <columns>Tickets_Ordered__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>de</language>
</ListView>